[gd_scene load_steps=9 format=3 uid="uid://cwga7b4jhtpga"]

[ext_resource type="Script" uid="uid://2a7p4kme11nx" path="res://scripts/thanks_card.gd" id="1_mwukl"]
[ext_resource type="Texture2D" uid="uid://cvis83pklbo35" path="res://assets/UI/ExitButton.png" id="1_smdl8"]
[ext_resource type="Texture2D" uid="uid://cvyti54qwysrf" path="res://assets/UI/YouWin1.png" id="1_tec4c"]
[ext_resource type="Texture2D" uid="uid://n0e5chn0fign" path="res://assets/UI/CreditsButton.png" id="3_mwukl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mpyqu"]
bg_color = Color(0, 0, 0, 0.423529)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.937469, 0.772824, 0.446983, 1)

[sub_resource type="Animation" id="Animation_4dstf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fsdyd"]
resource_name = "expand_tilt_left_then_right"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.7, 0.7), Vector2(0.7, 0.7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.174533, 0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4dstf"]
_data = {
&"RESET": SubResource("Animation_4dstf"),
&"expand_tilt_left_then_right": SubResource("Animation_fsdyd")
}

[node name="ThanksCard" type="CanvasLayer"]
script = ExtResource("1_mwukl")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("1_tec4c")

[node name="Label" type="Label" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_constants/paragraph_spacing = 0
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_mpyqu")
text = "THANKS FOR PLAYING !!!"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 171
metadata/_edit_use_anchors_ = true

[node name="CreditsButton" type="Button" parent="."]
offset_left = 437.0
offset_top = 504.0
offset_right = 1045.0
offset_bottom = 712.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(304, 104)
icon = ExtResource("3_mwukl")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CreditsButton"]
libraries = {
&"": SubResource("AnimationLibrary_4dstf")
}

[node name="ExitButton" type="Button" parent="."]
offset_left = 288.0
offset_top = 553.0
offset_right = 596.0
offset_bottom = 671.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(154, 59)
icon = ExtResource("1_smdl8")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ExitButton"]
libraries = {
&"": SubResource("AnimationLibrary_4dstf")
}

[connection signal="mouse_entered" from="CreditsButton" to="." method="_on_continue_button_mouse_entered"]
[connection signal="mouse_entered" from="CreditsButton" to="." method="_on_credits_button_mouse_entered"]
[connection signal="mouse_exited" from="CreditsButton" to="." method="_on_credits_button_mouse_exited"]
[connection signal="mouse_exited" from="CreditsButton" to="." method="_on_continue_button_mouse_exited"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_continue_button_pressed"]
[connection signal="mouse_entered" from="ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
